fix: scroll x on mobile

--- a/src/app/components/solutions/web-app-hero/web-app-hero.component.scss
+++ b/src/app/components/solutions/web-app-hero/web-app-hero.component.scss
@@ -78,6 +78,7 @@
     margin-bottom: 4rem;
     &__container {
       flex-direction: column;
+      padding: 0;
     }
     &__title {
       width: 100%;
